# power_and_gas

./: .gitignore  AGENTS.md  README.md  convert_ice_curves.py  describe_table.py  main.py  pyproject.toml  update_pjm_curvenames.py
dremio/: .env.template  .gitignore  README.md  __init__.py  cache_info.py  clear_dremio_cache.py  dremio_client.py  setup.py  test.py
pjm/: test_pjm.py
prompting/: data_sources.md  databricks_packages.md
